--- a/app/views/layouts/_javascripts.html.erb
+++ b/app/views/layouts/_javascripts.html.erb
@@ -13,7 +13,7 @@
 	<!-- calendar -->
 	<%-#= javascript_include_tag "fullcalendar" %>
 	<%-#= javascript_include_tag "calendar" %>	
-	<%= javascript_include_tag "popup" %>
+	<%-#= javascript_include_tag "popup" %>
 	
 	<!-- datepicker -->
 	<%-#= javascript_include_tag "jquery.datePicker" %>
