--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -4,7 +4,7 @@
 	<%= render 'results' %>		
 </div>
 <script type="text/javascript">
-	Frame.initSearchByName();
+	Frame.initSearchBySaunaName();
 	Frame.initSaunaSorting();
 </script>
 	
