--- a/app/views/layouts/_stylesheets_admin.html.erb
+++ b/app/views/layouts/_stylesheets_admin.html.erb
@@ -16,4 +16,7 @@
 	<!-- datepicker -->
 	<%= stylesheet_link_tag "datePicker",  :media => 'screen' %>
 	
-	<%= stylesheet_link_tag "jquery-ui-1.8.18.custom",  :media => 'screen' %>
+	<%= stylesheet_link_tag "jquery-ui-custom",  :media => 'screen' %>
+	
+	<%= stylesheet_link_tag "jquery-tooltip",  :media => 'screen' %>
+							 
