--- a/app/views/layouts/_stylesheets_admin.html.erb
+++ b/app/views/layouts/_stylesheets_admin.html.erb
@@ -18,5 +18,5 @@
 	
 	<%= stylesheet_link_tag "jquery-ui-custom",  :media => 'screen' %>
 	
-	<%= stylesheet_link_tag "jquery-tooltip",  :media => 'screen' %>
+	<%= stylesheet_link_tag "tooltip",  :media => 'screen' %>
 							 
