--- a/app/views/admin/saunas/edit.html.erb
+++ b/app/views/admin/saunas/edit.html.erb
@@ -13,7 +13,7 @@
 		<div class="round-sub-box">		
 			<div class="_expanded">
 				<%= form_for @sauna, :url => admin_sauna_path(@sauna), :html => { :multipart => true, :class => "comment-form" } do |f| %>					
-					<%= render 'edit_form', :f => f %>
+					<%= render 'form', :f => f %>
 				<% end %>
 			</div>
 			<div class="_closed"></div>
@@ -21,10 +21,3 @@
 		</div>
 	</div>
 </div>
-
-
-<script type="text/javascript">
-$(function() {
-	$('#edit_sauna_2 *').tooltip();
-});
-</script>	
