--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,7 +70,7 @@
 		</div>
 				
 		<script type="text/javascript">
-			$('.close-button').click(function() {
+			$('#close-button').click(function() {
 				$.get('/?second=1');
 				$('.welcome').hide();				
 			});
