--- a/app/views/notifier/booking_created_email_to_customer.text.erb
+++ b/app/views/notifier/booking_created_email_to_customer.text.erb
@@ -1,7 +1,7 @@
 Здравствуйте, <%= @booking.fio %>
 =====================================================
 
-Вы оставли заявку на бронирование:
+Вы оставили заявку на бронирование:
 банный комплекс: <%= @booking.sauna_item.sauna.name %>
 сауна: <%= @booking.sauna_item.name %>
 дата: <%= @booking.starts_at %>
