--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
 			<% if !signed_in? %>
 				<li><a href="/all">все сауны</a></li>
 				<li><a href="/about">о проекте</a></li>
-				<li><a href="/terms">правила и условия</a></li>
+				<li><a href="/howto">как это работает</a></li>
 				<li><a href="/faq">вопрос-ответ</a></li>
 				<!-- <li><a href="/contact">контакты</a></li>	-->							
 			<% end %>
