--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -1,5 +1,5 @@
 <div class="welcome">	
-	<div class="close-button">x</div>					
+	<div class="close-button" id="close-button">x</div>					
 	<div class="welcome-content">
 	<p>
 	В нашем каталоге около 80 саун в Ижевске и более 450 фотографий. Здесь Вы быстро и легко найдете всю информацию о саунах и банях в Ижевске. 
