--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -53,6 +53,7 @@
 			<select id="provider_type" name="provider_type">
 				<option value="1">Robokassa</option>
 				<option value="2">Webmoney</option>
+				<option value="3">A1PAY</option>
 			</select>
 		</dd>			
 	</dl>		
