--- a/app/views/bookings/create.js.erb
+++ b/app/views/bookings/create.js.erb
@@ -13,13 +13,23 @@ $('#Culture').val("<%= @pay_desc['culture'] %>");
 $('#LMI_PAYMENT_AMOUNT').val("<%= @pay_desc['out_summ'] %>");
 $('#LMI_PAYMENT_NO').val("<%= @pay_desc['shp_item'] %>");
 
+$('#cost').val("<%= @pay_desc['out_summ'] %>");
+$('#order_id').val("<%= @pay_desc['shp_item'] %>");
+$('#name').val("Бронирование");
+$('#default_email').val("<%= @pay_desc['email'] %>");
+
 var provider_type = <%= @pay_desc['provider_type'] %>;
 if (provider_type == 1) {
+    $('#a1pay').hide();
 	$('#webmoney').hide();
-	$('#robokassa').show();
-} else {
+	$('#robokassa').show();	
+} else if (provider_type == 2) {
+    $('#a1pay').hide();
 	$('#robokassa').hide();
 	$('#webmoney').show();
+} else {
+    $('#a1pay').show();
+	$('#robokassa').hide();
+	$('#webmoney').hide();
 }
 showSelectPaymentPopup();
-
