--- a/app/views/admin/users/_form.erb
+++ b/app/views/admin/users/_form.erb
@@ -11,6 +11,7 @@
 			<select name="user[user_type]">
 				<option value="2"><%= t :admin %></option>
 				<option value="3"><%= t :owner %></option>
+				<option value="4"><%= t :tester %></option>
 			</select> 	
 		</dd>		
 	<% end %>
