--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -26,10 +26,18 @@
 						Вы можете внести предоплату наличными в терминалах оплаты Qiwi.
 						</div>
 						
+						<div class="question"><b>Что означает поле "Провайдер" на форме бронирования?</b></div>
+						<div class="answer">
+						Провайдер - это компания-партнер, которая занимается обработкой платежей, совершаемых на нашем сайте. Провайдеры могут отличаться видами принимаемых платежей, а также размером комиссии.
+						Например, если Вы собираетесь оплачивать заказ с помощью WebMoney, то вам лучше выбрать провайдера "Webmoney", если Вы хотите оплатить с помощью смс - выбирите "A1PAY" 
+						(<a href="http://www.a1agregator.ru/main/abonent" target="_blank">посмотреть стоимость</a>), во всех 
+						остальных случаях рекомендуем Вам оплачивать через систему "Robokassa".
+						</div>
+						
 						<div class="question"><b>Какая комиссия взымается при оплате через ваш сайт?</b></div>
 						<div class="answer">
 						Мы не берем комиссию с пользователей. Комиссия может взыматься компаниями, которые обрабатывают Ваш платеж. 
-						Размер комиссии зависит от выбранного Вами способа оплаты.						
+						Размер комиссии зависит от выбранного Вами способа оплаты. 					
 						</div>				
 						
 						<div class="question"><b>Почему цена на сайте не совпадает с той, что мне озвучили в сауне?</b></div>
