--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="Document-state" content="Static" />
 		<meta name="URL" content="absolute_url" />
-		<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, поиск по цене, по адресу, по типу, по вместимости -  
-		для больших и маленьких компаний - все сауны в Ижевске в одном месте" />
+		<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
 		<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна, сауны Сарапула, сауны в Сарапуле, сауны Воткинска, сауны в Воткинске, сауны Глазова, сауны в Глазове, сауны в Можге, сауны Можги" />		
 		<meta name="Distribution" content="global" />
 		<meta name="Resource-type" content="document" />
