--- a/app/views/sauna_comments/_form.html.erb
+++ b/app/views/sauna_comments/_form.html.erb
@@ -11,6 +11,10 @@
 		</dd>
 		<dt></dt>
 		<dd>
+			<%= show_simple_captcha %>
+		</dd>
+		<dt></dt>
+		<dd>
 			<%= f.submit t :save %>
 		</dd>
 	</dl>								  
