--- a/app/views/pages/howto.html.erb
+++ b/app/views/pages/howto.html.erb
@@ -56,7 +56,7 @@
 		{"src":"data2/images/2.jpg","title":"Выбор времени бронирования","descr":"Выберите время бронирования. Выбранный вами временной интервал не должен пересекаться с другими бронированиями."},
 		{"src":"data2/images/3.jpg","title":"Контактная информация","descr":"Укажите вашу контактную информацию. На указанный номер телефона и e-mail вам придет уведомление о бронировании."},
 		{"src":"data2/images/4.jpg","title":"Подтверждение оплаты","descr":"На этом этапе заявка на бронирование будет отправлена администратору сауны. Для подтверждения ваших намерений вы должны внести предоплату. Мы не гарантируем бронирование сауны без внесения предоплаты."},
-		{"src":"data2/images/5.jpg","title":"Выбор способа оплаты на сайте Robokassa","descr":"Мы рекомендуем вам вносить предоплату с помощью банковской карты Visa или MasterCard. Для этого выберите вариант оплаты  "Банковской картой через Platezh.ru". Внимание! Вы должны зарегистрировать свою карту на сайте Platezh.ru для осуществления платежей."},
+		{"src":"data2/images/5.jpg","title":"Выбор способа оплаты на сайте Robokassa","descr":"Мы рекомендуем вам вносить предоплату с помощью банковской карты Visa или MasterCard. Для этого выберите вариант оплаты  Банковской картой через Platezh.ru. Внимание! Вы должны зарегистрировать свою карту на сайте Platezh.ru для осуществления платежей."},
 		{"src":"data2/images/6.jpg","title":"Ввод платежных данных","descr":"Авторизуйтесь на сайте Platezh.ru и введите CVV2 код."},
 		{"src":"data2/images/7.jpg","title":"Подтверждение платежа","descr":"Проверьте платежные реквизиты и подтвердите оплату"},
 		{"src":"data2/images/8.jpg","title":"Выполнение платежа","descr":"Дождитесь выполнения всех шагов оплаты. Платеж должен быть в статусе Исполнен."},
