--- a/app/views/pages/_video1.html.erb
+++ b/app/views/pages/_video1.html.erb
@@ -4,7 +4,7 @@
 <div class="ws_images">
 	<ul>
 		<a href="#">
-			<li><img src="/images/data1/images/1.jpg" alt="Основные параметры" title="Основные параметры" id="wows0"/>
+			<li><img src="images/data1/images/1.jpg" alt="Основные параметры" title="Основные параметры" id="wows0"/>
 			Задайте криетрии поиска: ценовой диапозон, размер, тип парной, наличие фотографий, возможность онлайн-бронирования.
 			</li>
 		</a>
@@ -12,10 +12,10 @@
 </div>
 <div class="ws_bullets">
 	<div>
-		<a href="#" title="Основные параметры"><img src="/images/data2/tooltips/1.jpg" alt="Основные параметры"/>1</a>
-		<a href="#" title="Дополнительные параметры"><img src="/images/data2/tooltips/2.jpg" alt="Дополнительные параметры"/>2</a>
-		<a href="#" title="Выбор местоположения"><img src="/images/data2/tooltips/3.jpg" alt="Выбор местоположения"/>3</a>
-		<a href="#" title="Результаты поиска"><img src="/images/data2/tooltips/4.jpg" alt="Результаты поиска"/>4</a>
+		<a href="#" title="Основные параметры"><img src="images/data1/tooltips/1.jpg" alt="Основные параметры"/>1</a>
+		<a href="#" title="Дополнительные параметры"><img src="images/data1/tooltips/2.jpg" alt="Дополнительные параметры"/>2</a>
+		<a href="#" title="Выбор местоположения"><img src="images/data1/tooltips/3.jpg" alt="Выбор местоположения"/>3</a>
+		<a href="#" title="Результаты поиска"><img src="images/data1/tooltips/4.jpg" alt="Результаты поиска"/>4</a>
 	</div>
 </div>
 <div class="ws_shadow"></div>
