--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,6 @@
 		<meta charset="UTF-8">
 		<meta name="Document-state" content="Static" />
 		<meta name="URL" content="absolute_url" />
-		<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
-		<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна, сауны Сарапула, сауны в Сарапуле, сауны Воткинска, сауны в Воткинске, сауны Глазова, сауны в Глазове, сауны в Можге, сауны Можги" />		
 		<meta name="Distribution" content="global" />
 		<meta name="Resource-type" content="document" />
 		<meta name="robots" content="all" />
@@ -13,7 +11,52 @@
 		<meta name="google-site-verification" content="q7mDR-c-V4nPNwEk4X5Vf1XqV9B3epiajBa8L7gZ6ZM" />
 		<meta name='yandex-verification' content='6ca27b58987c713c' />
 
-		<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
+		<% if request.fullpath.include? "izhevsk" %>
+			<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани и сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
+		<% elsif request.fullpath.include? "sarapul"  %>									
+			<meta name="description" content="Сауны Сарапула, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Сарапуле в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Сарапула, сауна в Сарапуле, бани и сауны, бани Сарапула, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Сарапула, русские, японские и турецкие бани — цены в Сарапуле</title>		
+		<% elsif request.fullpath.include? "votkinsk"  %>	
+			<meta name="description" content="Сауны Воткинска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Воткинске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Воткинска, сауна в Воткинске, бани и сауны, бани Воткинска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Воткинска, русские, японские и турецкие бани — цены в Воткинске</title>		
+		<% elsif request.fullpath.include? "mozhga"  %>	
+			<meta name="description" content="Сауны Можги, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Можге в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Можги, сауна в Можге, бани и сауны, бани Можги, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Можги, русские, японские и турецкие бани — цены в Можге</title>		
+		<% elsif request.fullpath.include? "glazov"  %>			
+			<meta name="description" content="Сауны Глазова, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Глазове в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Глазова, сауна в Глазове, бани и сауны, бани Глазова, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Глазова, русские, японские и турецкие бани — цены в Глазове</title>	
+		<% elsif request.fullpath.include? "kirov"  %>			
+			<meta name="description" content="Сауны Кирова, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Кирове в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Кирова, сауна в Кирове, бани и сауны, бани Кирова, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Кирова, русские, японские и турецкие бани — цены в Кирове</title>	
+		<% elsif request.fullpath.include? "kazan"  %>			
+			<meta name="description" content="Сауны Казани, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Казани в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Казани, сауна в Казани, бани и сауны, бани Казани, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Казани, русские, японские и турецкие бани — цены в Казани</title>	
+		<% elsif request.fullpath.include? "chelni"  %>			
+			<meta name="description" content="Сауны Набережных Челнов, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Набережных Челнах в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Набережных Челнов, сауна в Набережных Челнах, бани и сауны, бани Набережных Челнов, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Набережных Челнов, русские, японские и турецкие бани — цены в Набережных Челнах</title>				
+		<% elsif request.fullpath.include? "nizhnekamsk"  %>			
+			<meta name="description" content="Сауны Нижнекамска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Нижнекамске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Нижнекамска, сауна в Нижнекамске, бани и сауны, бани Нижнекамска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Нижнекамска, русские, японские и турецкие бани — цены в Нижнекамске</title>		
+		<% elsif request.fullpath.include? "neftekamsk"  %>			
+			<meta name="description" content="Сауны Нефтекамска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Нефтекамске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Нефтекамска, сауна в Нефтекамске, бани и сауны, бани Нефтекамска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Нефтекамска, русские, японские и турецкие бани — цены в Нефтекамске</title>							
+		<% else %>
+			<meta name="description" content="Сауны , турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны, русские, японские и турецкие бани - цены, фото, отзывы. </title>
+		<% end %>	
+		
 		
 		<%= csrf_meta_tag %>	
 		<%= render 'layouts/javascripts' %>			
