--- a/app/views/pages/all.html.erb
+++ b/app/views/pages/all.html.erb
@@ -18,20 +18,28 @@
 						<br/> 
 						
 						<a name="V"><b>В</b></a><br/>										
-						<a href="/votkinsk">Воткинск</a> — 4 сауны и бани <br/><br/>
+						<a href="/votkinsk">Воткинск</a><br/><br/>
 						
 						<a name="G"><b>Г</b></a><br/>
-						<a href="/glazov">Глазов</a> — нет данных <br/><br/>
+						<a href="/glazov">Глазов</a><br/><br/>
 						
 						<a name="I"><b>И</b></a><br/>
-						<a href="/izhevsk">Ижевск</a> — более 80 саун и бань <br/><br/>				
+						<a href="/izhevsk">Ижевск</a><br/><br/>				
+						
+						<a name="K"><b>К</b></a><br/>
+						<a href="/kazan">Казань</a><br/>
+						<a href="/kirov">Киров</a><br/><br/>	
 						
 						<a name="M"><b>М</b></a><br/>
-						<a href="/mozhga">Можга</a> — 4 сауны и бани <br/><br/>
+						<a href="/mozhga">Можга</a><br/><br/>
 						
+						<a name="N"><b>Н</b></a><br/>
+						<a href="/chelni">Набережные Челны</a><br/>
+						<a href="/neftekamsk">Нефтекамск</a><br/>
+						<a href="/nizhnekamsk">Нижнекамск</a><br/><br/>
 						
 						<a name="S"><b>С</b></a><br/>
-						<a href="/sarapul">Сарапул</a> — 6 саун и бань <br/><br/>
+						<a href="/sarapul">Сарапул</a><br/><br/>
 						
 					</div>
 					<div class="clearing"></div>
