--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,9 +52,9 @@
 			<meta name="keywords" content="сауна, бани, сауны Нефтекамска, сауна в Нефтекамске, бани и сауны, бани Нефтекамска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
 			<title>Сауны Нефтекамска, русские, японские и турецкие бани — цены в Нефтекамске</title>							
 		<% else %>
-			<meta name="description" content="Сауны , турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в одном месте" />
-			<meta name="keywords" content="сауна, бани, сауны, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
-			<title>Сауны, русские, японские и турецкие бани - цены, фото, отзывы. </title>
+			<meta name="description" content="Сауны Ижевска, турецкие хамамы, русские бани на дровах, японские бани, телефоны, цены, фото, отзывы - все сауны в Ижевске в одном месте" />
+			<meta name="keywords" content="сауна, бани, сауны Ижевска, сауна в Ижевске, бани и сауны, бани Ижевска, сауна на двоих, турецкие бани, русская баня, баня на дровах, инфракрасная сауна" />				
+			<title>Сауны Ижевска, русские, японские и турецкие бани — цены в Ижевске</title>
 		<% end %>	
 		
 		
