--- a/app/views/saunas/_results.html.erb
+++ b/app/views/saunas/_results.html.erb
@@ -12,8 +12,8 @@
 		<%= render 'shared/empty_row' %>
 	<% end %>
 </ul>
-<div style="padding-top: 540px;">
-<div class="digg_pagination">
-	<%= paginate @saunas, :remote => true %>
-</div>
+<div style="padding-top: 540px;" div="result-paging">
+	<div class="digg_pagination">
+		<%= paginate @saunas, :remote => true %>
+	</div>
 </div>
