--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,7 @@
 			<li><a href="/">главная</a></li>
 			
 			<% if !signed_in? %>
+				<li><a href="/map">поиск на карте</a></li>
 				<li><a href="/all">все сауны</a></li>
 				<li><a href="/about">о проекте</a></li>
 				<li><a href="/howto">как это работает</a></li>
