--- a/app/views/saunas/index.html.erb
+++ b/app/views/saunas/index.html.erb
@@ -3,6 +3,9 @@
 	<%= render 'shared/mobile' %>	
 	<%= render 'searchform' %>	
 	<%= render 'results' %>	
+	<%= render 'article1' %>	
+	<%= render 'article2' %>	
+	<%= render 'article3' %>	
 </div>
 <script type="text/javascript">
 	Frame.initMainPage();
