--- a/app/views/cities/_city.html.erb
+++ b/app/views/cities/_city.html.erb
@@ -1,6 +1,6 @@
 <div class="main-page">
-	<%= render 'shared/globalsearch' %>	
-	<%= render 'shared/mobile' %>	
+	<%-#= render 'shared/globalsearch' %>	
+	<%-#= render 'shared/mobile' %>	
 	<%= render 'results' %>		
 </div>
 <script type="text/javascript">
