json for photos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,18 @@
 						<!-- end WebMoney Transfer : accept label -->					
 					</td>
 					</tr>
+					<tr>
+					<td>
+						<!-- Yandex.Metrika informer -->
+						<a href="http://metrika.yandex.ru/stat/?id=12085759&amp;from=informer"
+						target="_blank" rel="nofollow"><img src="http://bs.yandex.ru/informer/12085759/3_0_20ACFFFF_008CF0FF_1_pageviews"
+						style="width:88px; height:31px; border:0;" 
+						alt="Яндекс.Метрика" title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" 
+						onclick="try{Ya.Metrika.informer({i:this,id:12085759,type:0,lang:'ru'});return false}catch(e){}"/></a>
+						<!-- /Yandex.Metrika informer -->
+					</td>
+					<td></td>
+					</tr>
 					</table>
 
 					
@@ -148,19 +160,29 @@
 		</script>	
 		<!-- /Reformal script -->
 		
+
 		<!-- Yandex.Metrika counter -->
-		<div style="display:none;"><script type="text/javascript">
-		(function(w, c) {
+		<script type="text/javascript">
+		(function (d, w, c) {
 			(w[c] = w[c] || []).push(function() {
 				try {
 					w.yaCounter12085759 = new Ya.Metrika({id:12085759, enableAll: true, webvisor:true});
-				}
-				catch(e) { }
+				} catch(e) {}
 			});
-		})(window, "yandex_metrika_callbacks");
-		</script></div>
-		<script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
+			
+			var n = d.getElementsByTagName("script")[0],
+				s = d.createElement("script"),
+				f = function () { n.parentNode.insertBefore(s, n); };
+			s.type = "text/javascript";
+			s.async = true;
+			s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+			if (w.opera == "[object Opera]") {
+				d.addEventListener("DOMContentLoaded", f);
+			} else { f(); }
+		})(document, window, "yandex_metrika_callbacks");
+		</script>
 		<noscript><div><img src="//mc.yandex.ru/watch/12085759" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-		<!-- /Yandex.Metrika counter -->		
+		<!-- /Yandex.Metrika counter -->	
 	</body>
 </html>
