json for cities

--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -2,7 +2,7 @@
 	<div class="close-button" id="close-button">x</div>					
 	<div class="welcome-content">
 	<p>
-	В нашем каталоге около 150 саун в Ижевске, Нефтекамске, Набережных Челнах и других городах Поволжья. Более 600 фотографий. Здесь Вы быстро и легко найдете всю информацию о саунах и банях вашего города. 
+	В нашем каталоге около 150 саун в Ижевске, Нефтекамске, Набережных Челнах и других городах региона. Более 600 фотографий. Здесь Вы быстро и легко найдете всю информацию о саунах и банях вашего города. 
 	Задайте параметры, которые наиболее важны для вас при выборе сауны, и
 	наша система найдет для вас подходящие сауны. Или же посмотрите <a href="/all">все сауны</a>, которые имеются в нашем каталоге.</p>
 	<p>
